Changes to z-index for navigation as well as making navigation fixed at the top

--- a/craft/public/resources/css/custom.css
+++ b/craft/public/resources/css/custom.css
@@ -34,6 +34,7 @@ footer .row {
 
 .navbar-nav {
   margin: 0px;
+  z-index: 1001;
 }
 
 .nav .navbar-nav {
@@ -76,7 +77,6 @@ footer .row {
   background-color: transparent;
   border: none;
   outline:none;
-  z-index: 150;
   position: absolute;
 }
 
@@ -86,10 +86,11 @@ footer .row {
 
 .menu-container {
   position: fixed;
+  height: 100%;
   width: 100%;
   background-color: white;
-  padding-top: 30px;
-  z-index: -5;
+  padding-top: 100px;
+  z-index: 1000;
 }
 
 /*Banner Image CSS*/
@@ -181,6 +182,7 @@ footer .row {
 
   .banner-full {
     height: 80vh;
+    max-height: 80vh;
   }
 
   /*Index "Homepage" Styles*/
